--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "courage/orange-money",
-    "description": "A Laravel package for USSD ORANGE payment API",
+    "description": "A Laravel package for USSD ORANGE MONEY payment API",
     "type": "library",
     "license": "MIT",
     "autoload": {
