--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,15 @@
         }
     },
     "require": {
-        "php": "^8.0"
+        "php": "^8.2",
+        "illuminate/support": "^12.0@dev"
+    },
+    "require-dev": {
+        "pestphp/pest": "3.x-dev"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
