--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Courage\\OrangeMoney\\": "src/"
+            "Courage\\OrangeMoney\\": "src/",
+            "Tests\\": "tests"
         }
     },
     "authors": [
