--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "courage/orange-money",
+    "name": "courage/orangemoneyussd",
     "description": "A Laravel package for USSD ORANGE MONEY payment API",
     "type": "library",
     "license": "MIT",
