--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require": {
         "php": "^8.2",
-        "illuminate/support": "^12.0@dev"
+        "illuminate/support": "^10.0 || ^11.0"
     },
     "require-dev": {
         "pestphp/pest": "3.x-dev"
